--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -51,7 +51,7 @@ jobs:
         run: pre-commit install-hooks
 
       - name: Run format checks
-        run: pixi run pre-commit
+        run: pixi run pre-commit --all-files
 
   types:
     runs-on: ubuntu-latest
