--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,8 +130,8 @@ python = "3.12.*"
 optional-dependencies = { cmd="python scripts/update_optional_dependencies.py && git diff --exit-code" }
 types = { cmd="mypy" }
 test = { cmd="pytest --ignore tests/deploy/ui --junit-xml=test-results.xml --durations=25" }
-pre-commit = { cmd="pre-commit run --all-files --show-diff-on-failure --color=always" }
-ci = { depends-on = ["pre-commit", "types", "optional-dependencies", "test"] }
+pre-commit = { cmd="pre-commit run {{ all_files }} --show-diff-on-failure --color=always", args=[ { "arg" = "all_files", "default" = "" } ] }
+ci = { depends-on = [ { "task" = "pre-commit", "args" = ["--all-files"] }, "types", "optional-dependencies", "test"] }
 
 [dependency-groups]
 dev = [
