Use pixi task for `optional-dependencies` CI check

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,8 +23,7 @@ jobs:
 
       - name: Test optional dependencies
         run: |
-          python scripts/update_optional_dependencies.py
-          git diff --exit-code
+          pixi run optional-dependencies
 
   format:
     runs-on: ubuntu-latest
