--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Run unit tests
         id: tests
         run: |
-          pixi run test
+          pixi run test --junit-xml=test-results.xml --durations=25
 
       - name: Surface failing tests
         if: steps.tests.outcome != 'success'
