--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,7 +50,7 @@ jobs:
         run: pre-commit install-hooks
 
       - name: Run format checks
-        run: pixi run pre-commit --all-files
+        run: pixi run pre-commit --all-files --show-diff-on-failure
 
   types:
     runs-on: ubuntu-latest
