--- a/pyproject.toml
+++ b/pyproject.toml
@@ -197,7 +197,7 @@ filterwarnings = [
     # https://github.com/lancedb/lancedb/issues/2315
     "ignore:Support for class-based `config`:pydantic.warnings.PydanticDeprecatedSince20",
     # https://github.com/pymupdf/PyMuPDF/issues/4392
-    "ignore::DeprecationWarning",
+    "ignore:builtin type \\w+ has no __module__ attribute:DeprecationWarning",
 ]
 xfail_strict = true
 
