--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,6 +205,9 @@ filterwarnings = [
     "ignore:Support for class-based `config`:pydantic.warnings.PydanticDeprecatedSince20",
     # https://github.com/pymupdf/PyMuPDF/issues/4392
     "ignore:builtin type \\w+ has no __module__ attribute:DeprecationWarning",
+    # https://github.com/qdrant/qdrant-client/issues/983
+    # Remove when Qdrant fixes this
+    "ignore::SyntaxWarning",
 ]
 xfail_strict = true
 
