--- a/pyproject.toml
+++ b/pyproject.toml
@@ -207,6 +207,7 @@ filterwarnings = [
     # https://github.com/qdrant/qdrant-client/issues/983
     # Remove when Qdrant fixes this
     "ignore:invalid escape sequence:SyntaxWarning",
+    "ignore:invalid escape sequence:DeprecationWarning",
 ]
 xfail_strict = true
 
