--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ dev-all-py310 = { features = ["all", "dev", "py310"], solve-group = "default" }
 dev-all-py311 = { features = ["all", "dev", "py311"], solve-group = "default-py311" }
 dev-all-py312 = { features = ["all", "dev", "py312"], solve-group = "default-py312" }
 dev-all-py313 = { features = ["all", "dev", "py313"], solve-group = "default-py313" }
+build = { features = ["build", "py310"], solve-group = "default" }
 
 [tool.pixi.tasks]
 
@@ -168,6 +169,7 @@ dev = [
     "material-plausible-plugin>=0.3.0,<0.4",
     "mdx-truly-sane-lists>=1.3,<2"
 ]
+build = ["twine", "build"]
 
 [tool.ruff.lint]
 select = [
