--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    outputs:
+      hashes: ${{ steps.build.outputs.hashes }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -19,6 +21,7 @@ jobs:
           environment: "build"
 
       - name: Build dists
+        id: build
         uses: ./.github/actions/build
 
   provenance:
