--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,22 +28,10 @@ jobs:
         id: build
         uses: ./.github/actions/build
 
-  provenance:
-    name: Provenance
-    needs: [build]
-    permissions:
-      actions: read
-      contents: write
-      id-token: write # Needed to access the workflow's OIDC identity.
-    uses: "slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v2.1.0"
-    with:
-      base64-subjects: "${{ needs.build.outputs.hashes }}"
-      upload-assets: true
-
   publish-pypi:
     name: "Publish to PyPI"
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-    needs: ["build", "provenance"]
+    needs: ["build"]
     permissions:
       contents: write
       id-token: write
