--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,6 @@ dev-all-py310 = { features = ["all", "dev", "py310"], solve-group = "default" }
 dev-all-py311 = { features = ["all", "dev", "py311"], solve-group = "default-py311" }
 dev-all-py312 = { features = ["all", "dev", "py312"], solve-group = "default-py312" }
 dev-all-py313 = { features = ["all", "dev", "py313"], solve-group = "default-py313" }
-build = { features = ["build", "py310"], solve-group = "default" }
 
 [tool.pixi.tasks]
 
@@ -133,9 +132,6 @@ python = "3.12.*"
 [tool.pixi.feature.py313.dependencies]
 python = "3.13.*"
 
-[tool.pixi.feature.build.tasks]
-build = "python -m build"
-
 [tool.pixi.feature.dev.tasks]
 optional-dependencies = { cmd="python scripts/update_optional_dependencies.py && git diff --exit-code" }
 types = { cmd="mypy" }
@@ -145,6 +141,7 @@ test = { cmd="pytest --ignore tests/deploy/ui" }
 # When it is supported, we should remove the argument definitions, as they will have become unnecessary.
 pre-commit = { cmd="pre-commit run {{ which_files }} {{ show_diff }} {{ colorize_output }}", args=[ { "arg" = "which_files", "default" = "--files $(git diff --name-only HEAD | tr '\n' ' ')" }, { "arg" = "show_diff", "default" = "" }, { "arg" = "colorize_output", "default" = "" } ] }
 ci = { depends-on = [ { "task" = "pre-commit", "args" = ["--all-files"] }, "types", "optional-dependencies", "test"] }
+build = { cmd="SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct) pixi run build" }
 
 [dependency-groups]
 dev = [
@@ -170,9 +167,9 @@ dev = [
     "mkdocstrings[python]>=0.29.1,<0.30",
     "mkdocs-gen-files>=0.5.0,<0.6",
     "material-plausible-plugin>=0.3.0,<0.4",
-    "mdx-truly-sane-lists>=1.3,<2"
+    "mdx-truly-sane-lists>=1.3,<2",
+    "build"
 ]
-build = ["build"]
 
 [tool.ruff.lint]
 select = [
